--- a/src/components/FormInput.css
+++ b/src/components/FormInput.css
@@ -26,7 +26,8 @@
 }
 
 .form-group input[type="time"] {
-  padding: 10px 16px;
+  padding: 12px 16px;
+  width: 100%;
 }
 
 .form-group input:focus {
